# hotel_service_new

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  wait_for_db.py
bookings/: admin.py  models.py  serializers.py  urls.py  views.py  views_web.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_options_remove_booking_guest_email_and_more.py  0003_booking_unique_booking_per_room_dates.py
bookings/tests/: test_models.py  test_serializers.py  test_views.py
hotel_service/: settings.py  urls.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py  views_web.py
rooms/migrations/: 0001_initial.py
rooms/tests/: test_models.py  test_views.py
templates/: base.html  index.html
templates/bookings/: availability.html  create.html  list.html
templates/rooms/: create.html  list.html
